--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+html, body {
+    background-color: #282c34;
+}
+
 .App {
   text-align: center;
+}
+
+.App-logo-animate {
+  height: 10vmin;
+  pointer-events: none;
 }
 
 .App-logo {
@@ -8,20 +17,20 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App-logo-animate {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-color: #282c34;
 }
 
 .App-link {
