--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -8,7 +8,10 @@
     flex-grow: 1;
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 
@@ -39,5 +42,19 @@
 }
 
 .flex-input-div input{
+    padding: 1%;
     height: calc(.8em + .5rem + 2px);
+}
+
+.flex-input-div button{
+    height: calc(1.2em + .5rem + 2px);
+    min-width: 100%;
+}
+
+
+.one-elm-flex{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
