--- a/src/components/RankRow.css
+++ b/src/components/RankRow.css
@@ -1,19 +1,36 @@
+.rank-cell-div{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.rank-main-content{
+    flex-grow: 0;
+}
+
+.rank-side-content{
+    min-width: 1em;
+    max-width: 1em;
+}
+
+
 .cell-points{
-    margin: 0;
+    margin: auto;
     padding: 0;
     align-items: center;
     display: block;
     font-size: 80%;
+    color: lightskyblue;
 }
 
 .cell-rejected{
-    margin: 0;
-    padding: 0;
-    min-width: 20px;
-    padding-left: 3px;
+    flex-grow: 0;
+    margin: auto;
+    padding: 2%;
     color: peru;
-    font-size: 90%;
-    display: inline;
+    font-size: 60%;
+    display: inline-block;
 }
 
 .cell-time{
@@ -21,8 +38,8 @@
     padding: 0;
     align-items: center;
     display: block;
-    font-size: 50%;
-    color: grey;
+    font-size: 53%;
+    color:honeydew;
 }
 
 .rank-font{
