--- a/src/components/OrgsList.css
+++ b/src/components/OrgsList.css
@@ -32,3 +32,9 @@
 .content-div{
     margin: 5% 5%;
 }
+
+.div-checkbox-selector input{
+    margin: auto;
+    width: calc(.8em + .5rem + 2px);
+    height: calc(.8em + .5rem + 2px);
+}
