--- a/src/components/ContestList.css
+++ b/src/components/ContestList.css
@@ -14,7 +14,6 @@
 .filter-container{
     display: flex;
     flex-flow: row wrap;
-    /* justify-content: flex-start; */
     align-items: left;
     justify-content: left;
     text-align: center;
@@ -32,11 +31,17 @@
 .content-div{
     margin: 5% 5%;
     width: 100%;
-
 }
 
 .div-checkbox-selector input{
-    margin: auto;
     width: calc(.8em + .5rem + 2px);
     height: calc(.8em + .5rem + 2px);
 }
+
+.checkbox-contest{
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  text-align: left;
+}
+
