filter textbox css

--- a/src/components/ContestList.css
+++ b/src/components/ContestList.css
@@ -12,6 +12,7 @@
 }
 
 .filter-container{
+    height: calc(.8em + .5rem + 2px);
     display: flex;
     flex-flow: row wrap;
     align-items: left;
