--- a/src/components/OrgsList.css
+++ b/src/components/OrgsList.css
@@ -1,11 +1,11 @@
 
-.contests td{
+.orgs td{
     padding-left: 10px;
     padding-right: 10px;
     text-align: left;
 }
 
-.contests th{
+.orgs th{
     padding-left: 10px;
     padding-right: 10px;
     text-align: left;
